--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
     <table cellspacing = "20">
         <tr>
-            <td> <img src="png-dragon-ball-z.png" alt="Goku Image here"> </td>
+            <td> <img src="download.png" alt="Goku Image here"> </td>
             <td> <h1> My information </h1>
                 <p> <em> Name is <strong> <a href="https://en.wikipedia.org/wiki/Goku"> Rohit kaushal </a> </strong> </em></p>
                 <p>I want to swtich my career motion to web develment </p>
